--- a/desktop.css
+++ b/desktop.css
@@ -1,10 +1,9 @@
 body {
     color: #ddd;
-    text-shadow:
-        2px 2px 0 #111,
-        -2px 2px 0 #111,
-        -2px -2px 0 #111,
-        2px -2px 0 #111;
+	text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
     font-family: 'Segoe UI', sans-serif; /* Use a fallback font */
     background-image: url('defaultWindowsWallpaper.jpg');
     background-repeat: no-repeat;
@@ -17,4 +16,7 @@ body {
     bottom: 0; 
     left: 0; 
     z-index: 10;
+  }
+  a {
+	  text-shadow: 0px 0px 0 #000;
   }
