--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
+    text-shadow: var(--txt-shadow);
     font-family: 'Press Start 2P', sans-serif; /* Use a fallback font */
     background-image: url('pixelForest.png');
     background-repeat: no-repeat;
@@ -11,10 +12,18 @@ body {
   :root {
     --bg-color: #f5f5f5; /* Light mode background color */
     --text-color: #333; /* Light mode text color */
+    --txt-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
   }
   .dark-mode {
     --bg-color: #121212; /* Dark mode background color */
     --text-color: #ddd; /* Dark mode text color */
+    --txt-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
   }
   .footer { 
     font-size: 11px;
@@ -22,6 +31,9 @@ body {
     bottom: 0; 
     left: 0; 
     z-index: 10;
+  }
+  a {
+	  text-shadow: 0px 0px 0 #000;
   }
   /* Additional styling for elements */
   /* ... */
