--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body {
+    position: relative;
+    top: 380px;
+    text-align: center;
     background-color: var(--bg-color);
     color: var(--text-color);
     text-shadow: var(--txt-shadow);
@@ -25,7 +28,14 @@ body {
 				 1px -1px 0 #000,
 				-1px -1px 0 #000;
   }
+  header {
+    position: relative;
+    top: 450px;
+	  left: -35px;
+    text-align: center;
+  }
   .footer { 
+    text-align: left;
     font-size: 11px;
     position: absolute; 
     bottom: 0; 
