--- a/desktop.css
+++ b/desktop.css
@@ -1,6 +1,7 @@
 body {
+    font-size: 11px;
     color: #ddd;
-	text-shadow: -1px 1px 0 #000,
+	  text-shadow: -1px 1px 0 #000,
 				  1px 1px 0 #000,
 				 1px -1px 0 #000,
 				-1px -1px 0 #000;
@@ -18,5 +19,24 @@ body {
     z-index: 10;
   }
   a {
-	  text-shadow: 0px 0px 0 #000;
+    color: #ddd;
+	  text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
+    text-decoration: none;
+    background-color: none;
+  }
+  img {
+    border-radius: 4px;
+    padding: 5px;
+  }
+  .outline {
+    width: 74px;
+  }
+  .outline:hover{
+    box-shadow: 0 0 2px 1px rgba(80,80,80,0.5);
+  }
+  .title {
+    text-align: center;
   }
