--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 body {
     text-align: center;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    text-shadow: var(--txt-shadow);
+    background-color: #121212; /*var(--bg-color);*/
+    color: #ddd;/*var(--text-color);*/
+    text-shadow: -1px 1px 0 #000,
+          1px 1px 0 #000,
+          1px -1px 0 #000,
+          -1px -1px 0 #000; /*var(--txt-shadow);*/
     font-family: 'Press Start 2P', sans-serif; /* Use a fallback font */
     background-image: url('pixelForest.png');
     background-repeat: no-repeat;
@@ -10,21 +13,25 @@ body {
     background-size: cover;
   }
   /* Base styles for light and dark modes */
+  /*
   :root {
-    --bg-color: #f5f5f5; /* Light mode background color */
-    --text-color: #333; /* Light mode text color */
+    --bg-color: #f5f5f5; 
+    --text-color: #333; 
     --txt-shadow: -1px 1px 0 #000,
 				  1px 1px 0 #000,
 				 1px -1px 0 #000,
 				-1px -1px 0 #000;
   }
   .dark-mode {
-    --bg-color: #121212; /* Dark mode background color */
-    --text-color: #ddd; /* Dark mode text color */
+    --bg-color: #121212; 
+    --text-color: #ddd; 
     --txt-shadow: -1px 1px 0 #000,
 				  1px 1px 0 #000,
 				 1px -1px 0 #000,
 				-1px -1px 0 #000;
+  }*/
+  p {
+    margin-left: -2em;
   }
   header {
     position: relative;
@@ -41,8 +48,19 @@ body {
     z-index: 10;
   }
   a {
-	  text-shadow: 0px 0px 0 #000;
+    color: var(--text-color);
+	  text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
+    text-decoration: none;
+    background-color: none;
+    color: var(--text-color);
+    text-shadow: var(--txt-shadow);
   }
-  /* Additional styling for elements */
-  /* ... */
-  /*h1, h2, h3 {  font-family: 'Press Start 2P', sans-serif;}*/
+  header a i {
+    visibility: hidden;
+  }
+  header a:hover i{
+    visibility: visible;
+  }
