--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,16 @@ section {
   gap: 1rem;
 }
 
+.circle-pic {
+  border-radius: 50%;
+}
+
+.headshot {
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+}
+
 /* Icons */
 .icon {
   cursor: pointer;
@@ -330,7 +340,7 @@ section {
 
 .section__pic-container {
   height: 400px;
-  height: 400px;
+  width: 400px;
   margin: auto 0;
 }
 
